--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,19 @@ code {
 
 
  
-    
+ .text-right{
+   text-align:right;
+   margin-top: -20px;
+ }   
  
-      
+ .item1{
+   margin-top: -10;
+ }     
    
+
+.plus1{
+  text-align: center;
+  margin-top: -10px;
+}
     
+
